--- a/Documents/Visual Studio 2015/Projects/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
+++ b/Documents/Visual Studio 2015/Projects/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
@@ -232,7 +232,6 @@
     </Compile>
     <Compile Include="DAL\IUnitOfWork.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\AspNetUserRepository.cs" />
-    <Compile Include="DAL\Repositories\Concrete Implementations\AspNetUserRoleRepository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\ContestRepository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\CriteriaScoreRepository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\CriterionRepository.cs" />
@@ -240,7 +239,6 @@
     <Compile Include="DAL\Repositories\Concrete Implementations\Repository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\TeamRepository.cs" />
     <Compile Include="DAL\Repositories\Interfaces\IAspNetUserRepository.cs" />
-    <Compile Include="DAL\Repositories\Interfaces\IAspNetUserRoleRepository.cs" />
     <Compile Include="DAL\Repositories\Interfaces\IContestRepository.cs" />
     <Compile Include="DAL\Repositories\Interfaces\ICriteriaScoreRepository.cs" />
     <Compile Include="DAL\Repositories\Interfaces\ICriterionRepository.cs" />
@@ -285,6 +283,7 @@
     <Compile Include="Team.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\ContestVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -367,10 +366,10 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Admin\CreateContest.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Admin\" />
     <Folder Include="Views\Judge\" />
     <Folder Include="Views\Participant\" />
   </ItemGroup>
