--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
@@ -321,6 +321,8 @@
     <Compile Include="ViewModels\ContestVM.cs" />
     <Compile Include="ViewModels\ParticipantViewModels\ContestTeamVM.cs" />
     <Compile Include="ViewModels\ParticipantViewModels\ParticipantContestVM.cs" />
+    <Compile Include="ViewModels\ParticipantViewModels\TeamCriteriaVM.cs" />
+    <Compile Include="ViewModels\ParticipantViewModels\TeamCriteriaVMList.cs" />
     <Compile Include="ViewModels\SingleCriteriaScoreVM.cs" />
     <Compile Include="ViewModels\SingleJudgeCriteriaScoreVM.cs" />
     <Compile Include="ViewModels\TeamCriteriaScoreVM.cs" />
@@ -419,6 +421,7 @@
     <Content Include="Views\Judge\team.cshtml" />
     <Content Include="Views\Participant\Index.cshtml" />
     <Content Include="Views\Participant\Contests.cshtml" />
+    <Content Include="Views\Participant\TeamScores.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
