--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
@@ -348,6 +348,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Images\logo-orange.png" />
     <Content Include="JavaScript\Create_Edit_forms.js" />
+    <Content Include="JavaScript\Judge_Team_form.js" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
