--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
@@ -388,6 +388,11 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Styles\AdminContestResponsiveTable.css" />
+    <Content Include="Styles\AdminIndexResponsive.css" />
+    <Content Include="Styles\ContestDetailResponsiveTables.css" />
+    <Content Include="Styles\JudgeContestResponsiveTable.css" />
+    <Content Include="Styles\JudgeIndexResponsive.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
