fix CriteriaDetail page

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
@@ -463,7 +463,7 @@
     <Content Include="Views\Participant\Index.cshtml" />
     <Content Include="Views\Participant\Contests.cshtml" />
     <Content Include="Views\Participant\TeamScores.cshtml" />
-    <Content Include="Views\Participant\CriteriaDetials.cshtml" />
+    <Content Include="Views\Participant\CriteriaDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
