--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
@@ -415,6 +415,7 @@
     <Content Include="Styles\AdminContestResponsiveTable.css" />
     <Content Include="Styles\AdminIndexResponsive.css" />
     <Content Include="Styles\ContestDetailResponsiveTables.css" />
+    <Content Include="Styles\ContestScores.css" />
     <Content Include="Styles\JudgeContestResponsiveTable.css" />
     <Content Include="Styles\JudgeIndexResponsive.css" />
     <Content Include="Styles\Judge_Participant.css" />
@@ -471,6 +472,7 @@
     <Content Include="Views\Participant\CriteriaDetails.cshtml" />
     <Content Include="Views\Account\SetPassword.cshtml" />
     <Content Include="Views\Participant\AllTeamMembersForATeam.cshtml" />
+    <Content Include="Views\Admin\ContestScores.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
