Beginning phase of choosing a winner

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
@@ -416,6 +416,7 @@
     <Content Include="Styles\AdminIndexResponsive.css" />
     <Content Include="Styles\ContestDetailResponsiveTables.css" />
     <Content Include="Styles\ContestScores.css" />
+    <Content Include="JavaScript\FinalizeContest.js" />
     <Content Include="Styles\JudgeContestResponsiveTable.css" />
     <Content Include="Styles\JudgeIndexResponsive.css" />
     <Content Include="Styles\Judge_Participant.css" />
