--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/packages.config
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/packages.config
@@ -44,6 +44,7 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
   <package id="SimpleInjector" version="3.1.3" targetFramework="net452" />
   <package id="SimpleInjector.Integration.Web" version="3.1.3" targetFramework="net452" />
   <package id="SimpleInjector.Integration.Web.Mvc" version="3.1.3" targetFramework="net452" />
