--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Riipen_SSD.csproj
@@ -270,6 +270,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DAL\IUnitOfWork.cs" />
+    <Compile Include="DAL\Repositories\Concrete Implementations\AspNetRoleRepository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\AspNetUserRepository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\ContestJudgeRepository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\ContestRepository.cs" />
@@ -278,6 +279,7 @@
     <Compile Include="DAL\Repositories\Concrete Implementations\FeedbackRepository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\Repository.cs" />
     <Compile Include="DAL\Repositories\Concrete Implementations\TeamRepository.cs" />
+    <Compile Include="DAL\Repositories\Interfaces\IAspNetRoleRepository.cs" />
     <Compile Include="DAL\Repositories\Interfaces\IAspNetUserRepository.cs" />
     <Compile Include="DAL\Repositories\Interfaces\IContestJudgeRepository.cs" />
     <Compile Include="DAL\Repositories\Interfaces\IContestRepository.cs" />
